# chipy8

./: Cargo.sync-conflict-20240913-171028-2VOCRAJ.toml  Cargo.toml  notes.md
src/: chip8.rs  cli.rs  display.rs  lib.rs  main.rs  rom.rs  widget.rs
