[package]
name = "chipy8"
version = "0.1.0"
edition = "2021"

[profile.dev]
overflow-checks = false

[dependencies]
iced = {version="0.13.1", features = ["canvas", "debug","image"]}
clap = { version = "4.5.17", features = ["derive"] }
crossterm = "0.28.1"
drawille = "0.3.0"
itertools = "0.13.0"
rand = "0.8.5"
ratatui = "0.28.1"
strum = "0.26.3"

